# nlw-trip-planner-ai-agent

./: Dockerfile  README.md  pyproject.toml  travelAgent.py
src/: chatComp.py  travelAgent.py  try.curl
src/nlw_ai_agent_trip_planner/: __init__.py
