[project]
name = "nlw-ai-agent-trip-planner"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "langchain-openai>=0.1.15",
    "duckduckgo-search>=6.1.12",
    "wikipedia>=1.4.0",
    "langchain>=0.2.7",
    "langchain-community>=0.2.7",
    "langchainhub>=0.1.20",
    "chromadb>=0.5.4",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nlw_ai_agent_trip_planner"]
